# ParMETIS

./: .gitmodules  CMakeLists.txt
libparmetis/: CMakeLists.txt
